--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    
+
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,7 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+  <script>navigator.serviceWorker.register("%PUBLIC_URL%/react-calculator-sw.js")</script> 
+    <title>React Calculator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +41,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script>
+      if (typeof navigator.serviceWorker !== 'undefined') {
+        navigator.serviceWorker.register('%PUBLIC_URL%/react-calculator-sw.js')
+      }
+
+      if (window.matchMedia('(display-mode: standalone)').matches) {
+        window.resizeTo(400, 630);
+      }
+    </script>
   </body>
 </html>
